<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iKonnect</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_vital">Sugar</string>
    <string name="action_add_symptoms">Symptom</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_cancel">Cancel</string>

    <string-array name="drawer_array">
        <item>Profile</item>
        <item>Awards</item>
        <item>Settings</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_vital_detail">VitalDetailActivity</string>
    <string name="title_activity_medicine_detail">MedicineDetailActivity</string>

    <!-- Card remove messages -->
    <string name="default_card_remove_message">one card removed</string>
    <string name="medicine_card_remove_message">Have you taken medicine?</string>
    <string name="vital_card_remove_message">Your vital entry will be recorded</string>
    <string name="followup_card_remove_message">Your answers will be recorded</string>
    <string name="message_card_remove_message">Do you want to dismiss message?</string>

    <string name="treatment_plan_remaining" formatted="false">%d DAYS PLAN (%d DAYS LEFT)</string>
    <string name="treatment_plan_completed" formatted="false">%d DAYS PLAN (COMPLETED)</string>

    <string name="notes">Notes</string>
    <string name="comments">Comments</string>
    <string name="points">Points</string>
    <string name="adherence">Adherence</string>

    <string name="doctl_tag_line">Connect to Your Doctors</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_login_email">username</string>
    <string name="hint_login_password">password</string>
    <string name="hint_register_email">email id given to hospital</string>
    <string name="hint_register_code">code from hospital sms or email</string>
    <string name="hint_register_password">New password</string>
    <string name="hint_register_password_confirm">Re-type new password</string>

    <string name="signout_title">Signout</string>
    <string name="signout_body">Are you sure?</string>
    <string name="signout_yes">Yes</string>
    <string name="signout_no">No</string>

    <string name="no_vital_data">No vital recorded yet. You can add from plus icon in task bar.</string>

    <string name="change_password_button">Change Password</string>
    <string name="change_password_title">Change Password</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="change_image_title">Change Picture</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_sex">Sex</string>

    <string-array name="image_picker_array">
        <item>Take from camera</item>
        <item>Select from gallery</item>
    </string-array>
    <string-array name="option">
        <item>Prescription</item>
        <item>Report</item>
        <item>Bill</item>
        <item>Food</item>
        <item>Other</item>
    </string-array>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_prescription">Prescription</string>
    <string name="nav_item_medicine">Medicine</string>
    <string name="nav_item_vital">Vitals</string>
    <string name="nav_item_sugar">Blood Sugar</string>
    <string name="nav_item_bp">Blood Pressure</string>
    <string name="nav_item_temperature">Temperature</string>
    <string name="nav_item_pulse">Pulse</string>
    <string name="nav_item_weight">Weight</string>
    <string name="nav_item_accounts">Account</string>
    <string name="nav_item_rewards">Points</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_logout">Log Out</string>
    <string name="nav_item_documents">Documents</string>
    <string name="nav_item_threads">Chat</string>
    <string name="nav_item_visits">Visits</string>
    <string name="nav_item_measures">Measures</string>

    <string name="notification_default_title">Message from Olivo.</string>
    <string name="notification_education_title">New education material.</string>
    <string name="notification_feedback_title">Need your feedback.</string>
    <string name="notification_followup_title">Your doctor wants answer from you.</string>

    <string name="doctl_branding_text">Powered by Olivo</string>

    <string name="reward_text_title">Awards</string>
    <string name="reward_unlock_string">awards unlocked</string>
    <string name="no_document_string">You don\'t have any reports yet.</string>
    <string name="upload_string">Upload</string>
    <string name="title_string">Title*</string>
    <string name="description_string">Description</string>
    <string name="delete_string">Delete</string>

    <string name="search_hint">Search Contacts</string>
    <string name="attach"> Attachment</string>
    <string name="title_activity_remainder">RemainderActivity</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="doc_type">Type</string>
    <string-array name="doc_type">
        <item>Bill</item>
        <item>Report</item>
        <item>Prescription</item>
        <item>Other</item>
    </string-array>
    <string name="no_chats_message">No chats Available, you can add chat by selecting user from search</string>
</resources>
