<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.doctl.patientcare.main.MainActivity">
    <item android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new"
        android:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/action_add_vital"
                android:title="@string/action_add_vital"
                 />
            <item android:id="@+id/action_add_symptom"
                android:title="@string/action_add_symptoms"
                />
        </menu>

    </item>
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        android:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never"/>

</menu>
