<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:src="@drawable/doctl_logo_full"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        />
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:text="@string/doctl_tag_line"-->
        <!--android:textSize="20sp"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--/>-->
    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/loginPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_login_email"
                android:textSize="18sp"

                />
            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:hint="@string/hint_login_password"
                android:textSize="18sp"
                />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="#555555"
                android:background="@drawable/button_style_white"
                android:text="@string/login"
                />

            <!--<Button-->
                <!--android:id="@+id/forgotPasswordButton"-->
                <!--style="@android:style/Widget.Holo.Light.Button.Borderless.Small"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="15sp"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_marginBottom="20dp"-->
                <!--android:textColor="@color/material_blue_600"-->
                <!--android:text="@string/forgot_password"-->
                <!--/>-->
        </LinearLayout>

        <TextView
            android:id="@+id/tosLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:paddingBottom="20dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_xxs"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>
</LinearLayout>
